[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Pause.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0, 0.00392157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -976, -176 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 120.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Pause Menu"
align = 1
valign = 1

[node name="Resume" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 120.0
margin_bottom = 54.0
text = "Resume"

[node name="Options" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 120.0
margin_bottom = 78.0
text = "Options"

[node name="ReturnToMenu" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 120.0
margin_bottom = 102.0
text = "Return to menu"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ReturnToMenu" to="." method="_on_ReturnToMenu_pressed"]
